# dw

./: .user.yml  pyproject.toml
dw/models/: schema.yml
dw/models/staging/: stg_commodities.sql  stg_movimentacao_commodities.sql
src/: extract_load.py
